[ADD] (#4) - Save codes when it's possible to put sth under carousel

--- a/main/style.css
+++ b/main/style.css
@@ -24,8 +24,19 @@ html, body {
     z-index: 9;
 }
 
+#button1 {
+    width:120px
+}
+
+#linkButton {
+    font-family: "Times New Roman", serif;
+    font-weight: bold;
+    font-size: 25px;
+}
+
 #slides {
     position: absolute;
     width: 100%;
     top: 0;
 }
+
