--- a/abroad/style.css
+++ b/abroad/style.css
@@ -1,9 +1,3 @@
-html,
-body {
-  /*height: 100%;*/
-  /*overflow: auto;*/
-}
-
 ul {
   padding-left: 30px;
 }
@@ -55,4 +49,16 @@ ul {
   position: relative;
   width: 100%;
   top: 0;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  transition: top 0.2s ease-in-out;
+}
+.nav-up {
+  top: -40px;
 }
