--- a/abroad/style.css
+++ b/abroad/style.css
@@ -2,21 +2,13 @@ ul {
   padding-left: 30px;
 }
 
-.carousel-inner img {
-  height: 100vh;
-  width: 100%;
-}
-
-.carousel-caption {
-  /*position: absolute;*/
-  top: 20%;
-  transform: translateY(-20%);
-}
-
-.carousel-caption h1 {
-  font-size: 300%;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 15px #000;
+.blind {
+  position: absolute;
+  margin: -1px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
 }
 
 .navbar {
@@ -45,12 +37,6 @@ ul {
   box-shadow: 0 2px 4px rgba(141, 38, 78, 0.7);
 }
 
-#slides {
-  position: relative;
-  width: 100%;
-  top: 0;
-}
-
 header {
   position: fixed;
   top: 0;
@@ -59,6 +45,27 @@ header {
   height: 40px;
   transition: top 0.2s ease-in-out;
 }
-.nav-up {
-  top: -40px;
+
+#footer {
+  display: flex;
+  justify-content: center;
+  background-color: #e9e9e9;
+  font-size: 20px;
+  height: 30px;
+  line-height: 30px;
+}
+
+.visible {
+  display: none;
+}
+
+.pie_container,
+.geo_container {
+  display: flex;
+  justify-content: center;
+}
+
+.geo_container {
+  width: 800px;
+  margin: 30px auto;
 }
