--- a/abroad/style.css
+++ b/abroad/style.css
@@ -42,7 +42,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 40px;
+  /* height: 40px; */
   transition: top 0.2s ease-in-out;
 }
 
@@ -68,4 +68,73 @@ header {
 .geo_container {
   width: 800px;
   margin: 30px auto;
+}
+
+/* .nav {
+  display: inline-block;
+  height: 60px;
+  vertical-align: top;
+} */
+
+/* #nav2 {
+  float: left;
+  height: 60px;
+  margin-left: 5px;
+} */
+/* 
+#nav2 li {
+  float: left;
+  height: 61px;
+}
+
+#nav2 li a {
+  display: block;
+  position: relative;
+  height: 60px;
+  padding: 0 27px 0 13px;
+  font-size: 16px;
+  line-height: 59px;
+  color: #000;
+} */
+
+/* .wrap_head {
+  text-align: center;
+} */
+
+/* ul {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+} */
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.menu_list {
+  display: flex;
+  width: 1000px;
+  justify-content: center;
+}
+.menu_item {
+  margin-left: 200px;
+  padding: 0;
+  color: #fff;
+}
+
+.nav-style {
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+  font-family: sans-serif;
 }
