--- a/main/style.css
+++ b/main/style.css
@@ -27,10 +27,10 @@ ul {
 }
 
 .navbar {
-  /* z-index: 9; */
-  position: fixed;
-  padding-top: 0;
-  padding-bottom: 0;
+    /* z-index: 9; */
+    position: fixed;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .visible {
@@ -120,31 +120,52 @@ th, td {
     line-height: 30px;
 }
 
+.btn-1 {
+    width: 300px;
+    height: 100px;
+    border:none;
+    color:white;
+    background-color: rgb(255, 0, 68);
+    border-radius: 4px;
+    box-shadow: inset 0 0 0 0 #f9e506;
+    transition: ease-out 0.3s;
+    font-size: 2rem;
+    outline: none;
+}
+
+.btn-1:hover{
+    box-shadow: inset 300px 0 0 0 #f9e506;
+    cursor: pointer;
+    color: #000;
+}
+
+
 ul,
 li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .menu_list {
-  display: flex;
-  width: 1000px;
-  justify-content: center;
+    display: flex;
+    width: 1000px;
+    justify-content: center;
 }
+
 .menu_item {
-  margin-left: 200px;
-  padding: 0;
-  color: #fff;
+    margin-left: 200px;
+    padding: 0;
+    color: #fff;
 }
 
 .nav-style {
-  font-size: 20px;
-  font-weight: bold;
-  color: black;
-  font-family: sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    font-family: sans-serif;
 }
