--- a/main/style.css
+++ b/main/style.css
@@ -9,6 +9,10 @@ ul {
     padding-left: 30px;
 }
 
+body {
+    font-family: "Times New Roman", serif;
+}
+
 .carousel-inner img {
     height: 100vh;
     width: 100%;
@@ -93,6 +97,11 @@ th, td {
     align-items: center;
 }
 
+/*#tempDiv{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+
 #infoDiv1Text {
     font-family: "Times New Roman", serif;
     font-size: 1.5vw;
@@ -120,23 +129,34 @@ th, td {
     line-height: 30px;
 }
 
+#wayToCBNUDiv {
+    align-items: center;
+}
+
+#infoImage1:hover {
+
+}
+
 .btn-1 {
     width: 300px;
     height: 100px;
-    border:none;
-    color:white;
-    background-color: rgb(255, 0, 68);
+    border: none;
+    color: #815854;
+    background-color: #F9EBDE;
     border-radius: 4px;
-    box-shadow: inset 0 0 0 0 #f9e506;
+    box-shadow: inset 0 0 0 0 #815854;
     transition: ease-out 0.3s;
     font-size: 2rem;
     outline: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 20px;
 }
 
-.btn-1:hover{
-    box-shadow: inset 300px 0 0 0 #f9e506;
+.btn-1:hover {
+    box-shadow: inset 300px 0 0 0 #815854;
     cursor: pointer;
-    color: #000;
+    color: #F9EBDE;
 }
 
 
