--- a/abroad/style.css
+++ b/abroad/style.css
@@ -32,8 +32,9 @@ header {
 }
 
 #footer {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+  float: left;
   background-color: #e9e9e9;
   font-size: 20px;
   height: 30px;
@@ -44,15 +45,18 @@ header {
   display: none;
 }
 
-/* .wraper1 {
-  text-align: center;
-} */
-
 .status1 {
   margin: 0 11.5%;
   float: left;
   width: 600px;
   height: 600px;
+}
+
+.status2 {
+  margin: 40px 8.5%;
+
+  width: 1500px;
+  height: 200px;
 }
 
 .pie_container {
