--- a/main/style.css
+++ b/main/style.css
@@ -201,3 +201,45 @@ a {
     color: black;
     font-family: sans-serif;
 }
+
+.container span{
+    display: block;
+    text-transform: uppercase;
+}
+
+.text1{
+    font-size: 55px;
+    font-weight: 700;
+    letter-spacing: 8px;
+    margin-bottom: 20px;
+    color: black;
+    background-color: transparent;
+    position: relative;
+    animation: text 3s 1;
+}
+
+.text2{
+    font-size: 30px;
+    color: black;
+    animation : change 2.6s step-end both;
+}
+
+@keyframes change {
+    from {color:transparent}
+    to  {color: black}
+}
+
+@keyframes text{
+    0%{
+        color:black;
+        margin-bottom: -40px;
+    }
+    30%{
+        letter-spacing: 25px;
+        margin-bottom: -40px;
+    }
+    85%{
+        letter-spacing: 8px;
+        margin-bottom: -40px;
+    }
+}
