--- a/abroad/style.css
+++ b/abroad/style.css
@@ -23,7 +23,7 @@ ul {
 }
 
 header {
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   left: 0;
   width: 100%;
@@ -120,4 +120,28 @@ a {
 
 .infoImage:hover img {
   transform: scale(1.11);
+}
+
+#slides {
+  position: relative;
+  width: 100%;
+  top: 0;
+  /* z-index: 0; */
+}
+
+.carousel-inner img {
+  height: 100vh;
+  width: 100%;
+}
+
+.carousel-caption {
+  /*position: absolute;*/
+  top: 20%;
+  transform: translateY(-20%);
+}
+
+.carousel-caption h1 {
+  font-size: 300%;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 15px #000;
 }
