[ADD] (#13) - Adding carousel captions in abroad.html

--- a/abroad/style.css
+++ b/abroad/style.css
@@ -145,3 +145,49 @@ a {
   text-transform: uppercase;
   text-shadow: 1px 1px 15px #000;
 }
+
+.container span {
+  display: block;
+  text-transform: uppercase;
+}
+
+.text1 {
+  font-size: 55px;
+  font-weight: 700;
+  letter-spacing: 8px;
+  margin-bottom: 20px;
+  color: black;
+  background-color: transparent;
+  position: relative;
+  animation: text 3s 1;
+}
+
+.text2 {
+  font-size: 30px;
+  color: black;
+  animation: change 2.6s step-end both;
+}
+
+@keyframes change {
+  from {
+    color: transparent;
+  }
+  to {
+    color: black;
+  }
+}
+
+@keyframes text {
+  0% {
+    color: black;
+    margin-bottom: -40px;
+  }
+  30% {
+    letter-spacing: 25px;
+    margin-bottom: -40px;
+  }
+  85% {
+    letter-spacing: 8px;
+    margin-bottom: -40px;
+  }
+}
