--- a/abroad/style.css
+++ b/abroad/style.css
@@ -199,23 +199,6 @@ a {
   }
 }
 
-/* .text2 {
-  font-size: 30px;
-  color: black;
-  animation: change 2.6s step-end both;
-  position: relative;
-  left: 100%;
-}
-
-@keyframes change {
-  from {
-    color: transparent;
-  }
-  to {
-    color: black;
-  }
-} */
-
 .text2 {
   font-size: 30px;
   color: black;
@@ -251,4 +234,32 @@ a {
     filter: blur(0px);
     opacity: 1;
   }
+}
+
+.nav-animation {
+  padding-bottom: 1px;
+  color: hsl(222, 25%, 14%);
+  position: relative;
+}
+
+.nav-animation:hover {
+  color: black;
+}
+
+.nav-animation::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  transform: translateY(3px);
+  background: hsl(243, 80%, 62%);
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
+.nav-animation:hover::after {
+  opacity: 1;
+  transform: translateY(0);
 }
