--- a/main/style.css
+++ b/main/style.css
@@ -359,3 +359,31 @@ a {
         margin-bottom: -40px;
     }
 }
+
+.nav-animation {
+    padding-bottom: 1px;
+    color: hsl(222, 25%, 14%);
+    position: relative;
+}
+
+.nav-animation:hover {
+    color: black;
+}
+
+.nav-animation::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    opacity: 0;
+    transform: translateY(3px);
+    background: hsl(243, 80%, 62%);
+    transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
+.nav-animation:hover::after {
+    opacity: 1;
+    transform: translateY(0);
+}
