[FIX] (#13) Fix image size error caused by adding footer

--- a/abroad/style.css
+++ b/abroad/style.css
@@ -282,19 +282,18 @@ a {
     background-color: #fff9e9;
 }
 
-
 .footerContainer{
     font-family: 'Poppins', sans-serif;
     max-width: 1170px;
     margin: auto;
 }
 
-.row{
+.footerRow{
     display: flex;
     flex-wrap: wrap;
 }
 
-ul{
+.footer-col ul{
     list-style: none;
 }
 
@@ -375,4 +374,8 @@ ul{
     .footer-col{
         width: 100%;
     }
+}
+
+.item{
+    padding: 40px;
 }
